# new_again_db

./: .gitignore  .pylintrc  new_again_db.spec  pyproject.toml  readme.md  requirement.txt  sql.py  start.py  test.py
.refactor/: README.md  requirements.txt  start.py  tests.py
.refactor/app/: __init__.py  application.py  main_window.py  table_handler.py  ui_main_window.py
.refactor/app/dialogs/: __init__.py  add_plate_dialog.py  font_size_dialog.py
.refactor/db/: __init__.py  database_manager.py  init.py
.refactor/utils/: __init__.py  config_manager.py  formatter.py  logger.py
app/: add_plate_dialog.py  logger.py  main_ui.py  table_view_handler.py
db/: database.py  initialize_db.py
refactor/: spec.md
refactor/app/: main.py
