[project]
name = "new-again-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.4",
    "macholib==1.16.3",
    "packaging==24.2",
    "pyinstaller==6.12.0",
    "pyinstaller-hooks-contrib==2025.1",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.0",
    "setuptools==75.8.2",
]
